# codepath

./: README.md  bun.lockb  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
codepath-api/: Cargo.toml
codepath-api/src/: context.rs  main.rs
codepath-api/src/models/: user.rs
codepath-api/src/routes/: mod.rs
codepath-web/: package.json
codepath-web/src/: globals.css
codepath-web/src/components/: app-sidebar.tsx  nav-user.tsx
codepath-web/src/components/courses/: page.tsx
codepath-web/src/components/dashboard/: dashboard.tsx
codepath-web/src/components/login/: login-form.tsx
codepath-web/src/components/ui/: button.tsx
codepath-web/src/routes/: _auth.dashboard.tsx  login.tsx
server/: .gitignore
server/src/: error.rs
server/src/routes/: auth.rs  middleware.rs  mod.rs
src/: App.tsx  auth.tsx  globals.css  routeTree.gen.ts
src/components/: app-sidebar.tsx  dashboard.tsx  login-form.tsx
src/routes/: __root.tsx  _auth.dashboard.tsx  _auth.tsx  login.tsx
web/: .gitignore  bun.lockb
web/src/: main.tsx  routeTree.gen.ts
web/src/routes/: __root.tsx  _auth.courses.tsx  _auth.tsx  index.lazy.tsx
