[package]
name = "codepath-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
axum-macros = "0.4.1"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dotenvy = "0.15.7"
tower-cookies = "0.10.0"
aws-config = "1.5.4"
aws-sdk-dynamodb = "1.38.0"
tower-http = { version = "0.5.2", features = ["cors"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
http = "1.1.0"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
